fix docker image